syntax = "proto3";

option csharp_namespace = "namespace_Nearestneighbor";

package nearestneighbor;

// The greeting service definition.
service NearestNeighbor {
  // Sends a greeting
  rpc TSPRoute (RouteRequest) returns (RouteReponse);
}

// The request message containing the user's name.
message RouteRequest {
    string matrixdistance = 1; // 2D array represented as a string
    string ids = 4;
    int32 srcid=2;
    int32 desid=3;
}

message SortIDs{
    repeated int32 id = 1;
}
// The response message containing the greetings.
message RouteReponse {
    SortIDs sortids=1;
    float totaldistance=2;
}
